--- a/src/mixin/_at-root.scss
+++ b/src/mixin/_at-root.scss
@@ -1,4 +1,5 @@
-@use '../function/selector' as selector-utils;
+@use 'sass:list';
+@use '../function/selector/get-element-name' as *;
 
 /// Use `@at-root` while adding classes (or attributes) `$classes` to an element node `$append-target`.
 /// If the element was not found a standard `@at-root` is used.
@@ -8,11 +9,11 @@
 @mixin at-root($append-target, $appended-selector: '') {
   $is-element-found: false;
   $combined-selectors: '';
-  $selectors: nth(&, 1);
+  $selectors: list.nth(&, 1);
 
   @if ($appended-selector) {
     @each $selector in $selectors {
-      $pure-element-selector: selector-utils.get-element-name($selector);
+      $pure-element-selector: get-element-name($selector);
 
       @if (($pure-element-selector == $append-target) and (not $is-element-found)) {
         $is-element-found: true;
