--- a/src/function/list/_remove-nth.scss
+++ b/src/function/list/_remove-nth.scss
@@ -1,4 +1,4 @@
-@use '../list' as list-utils;
+@use '../list/replace-nth' as *;
 
 /// Remove a value at a certain index from a list
 /// @link https://hugogiraudel.com/2013/08/08/advanced-sass-list-functions/#removing-values-from-list
@@ -7,5 +7,5 @@
 /// @return {*} - The list's first item
 ///
 @function remove-nth($list, $index) {
-  @return list-utils.replace-nth($list, $index);
+  @return replace-nth($list, $index);
 }
