--- a/src/mixin/_has-focus.scss
+++ b/src/mixin/_has-focus.scss
@@ -1,16 +1,17 @@
-@use '../mixin' as mixin-utils;
+@use '../mixin/supports-hover' as *;
+@use '../mixin/supports-touch' as *;
 
 /// Styles touch/hover states according to browser capabilities
 /// @param {boolean} $toggle - State toggle; Available values: `true`, `false` or `default` (for both)
 ///
 @mixin has-focus() {
-  @include mixin-utils.supports-hover {
+  @include supports-hover {
     &:hover, &:focus {
       @content;
     }
   }
 
-  @include mixin-utils.supports-touch {
+  @include supports-touch {
     &:active {
       @content;
     }
