--- a/test.scss
+++ b/test.scss
@@ -1,5 +1,6 @@
 @use 'sass:list';
 @use 'sass:map';
+@use 'sass:meta';
 @use 'lib/mixin' as mixin-utils;
 @use 'lib/function/list' as list-utils;
 @use 'lib/function/map' as map-utils;
@@ -45,8 +46,10 @@
     't-list-slice-1': list-utils.slice($test-list, 2, 3),
     't-map-assign-1': map-utils.assign($test-map),
     't-map-deep-get-1': map-utils.deep-get($test-map, 'color'),
+    't-math-to-length-1': math-utils.to-length(5, 'rem'),
     't-meta-is-truthy-1': meta-utils.is-truthy('foo'),
     't-meta-strip-unit-1': meta-utils.strip-unit(3),
+    't-meta-to-number-1': meta-utils.to-number('3.141'),
     't-meta-to-string-1': meta-utils.to-string(foo),
     't-selector-get-element-name-1': selector-utils.get-element-name('.test'),
     't-string-replace-1': string-utils.replace('test', 'st', 'oo'),
@@ -70,20 +73,24 @@
     't-list-slice-1': bar baz,
     't-map-assign-1': (foo: bar),
     't-map-deep-get-1': null,
+    't-math-to-length-1': 5rem,
     't-meta-is-truthy-1': true,
     't-meta-strip-unit-1': 3,
+    't-meta-to-number-1': 3.141,
     't-meta-to-string-1': 'foo',
     't-selector-get-element-name-1': 'test',
     't-string-replace-1': 'teoo',
     't-string-split-1': 't' 'e' 's' 't',
   );
 
-  @for $i from 1 through (list.length($test-fixtures)) {
-    $fixture: map.get($test-fixtures, 't-#{$i}');
-    $result: map.get($test-functions, 't-#{$i}');
+  @each $key, $value in (map.keys($test-fixtures)) {
+    $result: map.get($test-functions, $key);
+    $fixture: map.get($test-fixtures, $key);
 
     @if ($result != $fixture) {
-      @error 'Comparison test ##{$i} failing! - Fixture: #{$fixture} ~vs~ Result: #{$result}';
+      @error 'Comparison test "#{$key}" failing! - Fixture: #{meta.inspect($fixture)} ~vs~ Result: #{meta.inspect($result)}';
+    } @else {
+      @debug 'Comparison test "#{$key}" successful! - Fixture: #{meta.inspect($fixture)} ~vs~ Result: #{meta.inspect($result)}';
     }
   }
 }
