--- a/lib/function/meta/_to-number.scss
+++ b/lib/function/meta/_to-number.scss
@@ -6,6 +6,10 @@
 
 $numbers: ('0': 0, '1': 1, '2': 2, '3': 3, '4': 4, '5': 5, '6': 6, '7': 7, '8': 8, '9': 9);
 
+/// Casts a string into a number
+/// @param {string|number} $value - Value to be parsed
+/// @return {number}
+///
 @function to-number($value) {
   @if meta.type-of($value) == 'number' {
     @return $value;
