--- a/lib/function/list/_purge.scss
+++ b/lib/function/list/_purge.scss
@@ -8,10 +8,11 @@
 ///
 @function purge($list) {
   $result: ();
+  $separator: list.separator($list);
 
   @each $item in $list {
     @if (is-truthy($item)) {
-      $result: list.append($result, $item);
+      $result: list.append($result, $item, $separator);
     }
   }
 
